--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 
         
-          <nav  class="navbar-item">
+          <nav  class="navbar">
             <ul class="navbar-item">
             <li>
         <div class="logo navbar-item">
@@ -80,4 +80,3 @@
 
   </body>
 </html>
-
