--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     
     <div class="main">
       <div class="box">
-
+<div class="logo">
 
         
           <nav  class="navbar">
@@ -75,6 +75,7 @@
 </ul>
 
         </nav>
+      </div>
       </div>
     </div>
 
