--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
           <i class="fa-solid fa-bomb navbar-item"></i>
         </div>
        </li>
+              </nav>
+            <nav class="navbar">
        <li>
         <div class="field has-addons navbar-item">
           <p class="control">
@@ -42,6 +44,7 @@
           </p>
           </li>
         </div>
+        </nav>
         
 <li>
           <p class="control">
